--- a/components/btn/btn.module.css
+++ b/components/btn/btn.module.css
@@ -1,3 +1,9 @@
 .btn {
+  min-width: 10rem;
+  min-height: 3rem;
   background-color: hotpink;
+  border: none;
+  border-radius: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2rem;
 }
