💄 Add font families in css globals

--- a/components/btn/btn.module.css
+++ b/components/btn/btn.module.css
@@ -5,6 +5,6 @@
   background-color: hotpink;
   border: none;
   border-radius: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Paytone One", sans-serif;
   font-size: bolder 2rem;
 }
