--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@900&family=Paytone+One&family=Quicksand&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif,
+    Quicksand, Paytone One;
 }
 
 a {
@@ -21,6 +24,7 @@ a {
   --primary-color: #ff00a7;
   --secondary-color: #7406c4;
   --selected-card-color: #000aff;
+  --card-background-color: #362f2f;
 }
 * {
   box-sizing: border-box;
