--- a/components/btn/btn.module.css
+++ b/components/btn/btn.module.css
@@ -1,5 +1,6 @@
 .btn {
-  margin: 1rem;
+  width: 80%;
+  margin: 1rem 1rem 1rem 1rem;
   padding: 1.5rem;
   text-align: center;
   transition: 0.5s;
