♻️ refactor home component code

--- a/components/footer/home/homeBtn.module.css
+++ b/components/footer/home/homeBtn.module.css
@@ -4,3 +4,10 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.homeBtn {
+  width: 3rem;
+  height: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
