--- a/components/footer/favs/favsBtn.module.css
+++ b/components/footer/favs/favsBtn.module.css
@@ -4,3 +4,10 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.favsBtn {
+  width: 3rem;
+  height: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
