--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -1,3 +1,16 @@
 .card {
-  background-color: deepskyblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  padding: 1.5rem;
+  text-align: center;
+  transition: 0.5s;
+  border: 3px solid #ff00a7;
+  border-radius: 50px;
+}
+
+.title {
+  color: var(--secondary-color);
 }
