--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -1,16 +1,31 @@
 .card {
+  max-width: 40%;
+  padding-top: 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: rgb(255, 255, 255);
-  padding: 1.5rem;
   text-align: center;
-  transition: 0.5s;
+  transition: 0.2s;
   border: 3px solid #ff00a7;
-  border-radius: 50px;
+  border-radius: 30%;
+}
+
+.card:hover {
+  border: 3px solid #6a00ff;
+}
+
+.image {
+  max-width: 50%;
 }
 
 .title {
   color: var(--secondary-color);
+  font-size: 1.125rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.title:hover {
+  color: #5d00df;
 }
