♻️ refactor: import icons

--- a/components/footer/home/homeBtn.module.css
+++ b/components/footer/home/homeBtn.module.css
@@ -1,11 +1,4 @@
-.homeImg {
-  width: 3rem;
-  height: 3rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.homeBtn {
+.icon {
   width: 3rem;
   height: 3rem;
 }
