🔥 remove unnecessary settings

--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  background-color: #fff;
   text-align: center;
   transition: 0.2s;
   border: 3px solid #ff00a7;
