--- a/components/btn/btn.module.css
+++ b/components/btn/btn.module.css
@@ -4,7 +4,7 @@
   text-align: center;
   transition: 0.5s;
   background-size: 200% auto;
-  color: var(--button-color);
+  color: var(--button-main);
   background-image: linear-gradient(
     to right,
     #f723ff 0%,
