--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ a {
 }
 
 :root {
-  --background-color: #e6ffff;
+  --background-color: #d1ffff;
   --button-BG-main: #f723ff;
   --button-main: #effeff;
   --placeholder-BG-color: #ffedfa;
