--- a/components/cardMain/cardMain.module.css
+++ b/components/cardMain/cardMain.module.css
@@ -3,4 +3,13 @@
   color: #a09897;
   border-radius: 20px;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  max-width: 50%;
+  display: flex;
 }
