--- a/components/cardMain/cardMain.module.css
+++ b/components/cardMain/cardMain.module.css
@@ -6,10 +6,58 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.cardIntro {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .image {
   max-width: 50%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.name {
+  color: whitesmoke;
+}
+
+.factsContainer {
+  background-color: #423939;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.factContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem;
+  border-radius: 20px;
+}
+
+.factTitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.factContent {
+  background-color: white;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 2rem 1rem 2rem;
+  border-radius: 20px;
 }
