--- a/components/cardMain/cardMain.module.css
+++ b/components/cardMain/cardMain.module.css
@@ -61,3 +61,12 @@
   padding: 1rem 2rem 1rem 2rem;
   border-radius: 20px;
 }
+.span {
+  padding-right: 1rem;
+}
+.dietContainer {
+  background-color: black;
+}
+.allergensContainer {
+  background-color: black;
+}
