--- a/components/cardMain/cardMain.module.css
+++ b/components/cardMain/cardMain.module.css
@@ -30,9 +30,12 @@
 .factsContainer {
   background-color: #423939;
   border-radius: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
 }
 
 .factContainer {
@@ -61,12 +64,66 @@
   padding: 1rem 2rem 1rem 2rem;
   border-radius: 20px;
 }
-.span {
-  padding-right: 1rem;
-}
+
 .dietContainer {
-  background-color: black;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
 }
-.allergensContainer {
+
+.diet {
+  background-color: #040404;
+  color: #27ff27;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 20px;
+}
+.dairy {
   background-color: black;
+  color: #74bfff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 20px;
+}
+
+.gluten {
+  background-color: black;
+  color: #ffff9f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 20px;
+}
+
+.nuts {
+  background-color: black;
+  color: #ffba80;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 20px;
+}
+
+.soy {
+  background-color: black;
+  color: #c0ffbe;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 20px;
 }
