--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,11 +7,17 @@
   align-items: center;
 }
 
-.main {
+/* .main {
   padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+} */
+
+.btn {
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
 }
