--- a/components/forms/form.module.css
+++ b/components/forms/form.module.css
@@ -47,3 +47,9 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
 }
+
+.cardMain {
+  margin: 1rem;
+  margin-bottom: 2rem;
+  width: 100%;
+}
