--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -1,20 +1,20 @@
 .container {
-  min-height: 100vh;
-  min-width: 100vw;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
+}
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .card {
-  margin: 1rem;
   margin-bottom: 2rem;
 }
 
 .form {
-  min-width: 100%;
+  padding: 2.2rem 0.5rem 2.2rem 0.5rem;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
