--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ a {
   --gradient-1: #f723ff;
   --gradient-2: #6f22ff;
   --gradient-3: #fb23cd;
+  --footer: #9ff4ff;
 }
 * {
   box-sizing: border-box;
