--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -1,21 +1,27 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  overflow-y: auto;
-}
-.container::-webkit-scrollbar {
-  display: none;
+.input {
+  width: 100%;
+  padding: 1.5rem;
+  text-align: center;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #574848;
+  background-image: linear-gradient(
+    to bottom,
+    #ffedfa 0%,
+    #ffc7ef 51%,
+    #ffcef1 100%
+  );
+  box-shadow: 0 0 2rem #148dff;
+  border: 1px solid;
+  border-radius: 20px;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
 }
 
 .card {
-  margin-bottom: 2rem;
-}
-
-.form {
-  padding: 2.2rem 0.5rem 2.2rem 0.5rem;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  margin: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 1rem;
+  list-style: none;
 }
