--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   overflow-y: auto;
+  padding-bottom: 5.5rem;
 }
 .container::-webkit-scrollbar {
   display: none;
