🔥 remove unnecessary code

--- a/components/dark/themeBtn.module.css
+++ b/components/dark/themeBtn.module.css
@@ -1,10 +1,4 @@
 .btn {
-  padding: 2rem;
-  color: pink;
-  background: darkgreen;
-}
-
-.dark {
-  color: aquamarine;
-  background: whitesmoke;
+  padding: 1.2rem;
+  background: var(--gradient-1);
 }
